# linear

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/skills/linear-issues/: SKILL.md
.claude/skills/linear-ops/: SKILL.md
.claude/skills/linear-projects/: SKILL.md
.claude/skills/linear-reporting/: SKILL.md
.claude/skills/linear-triage/: SKILL.md
src/linear_cli/: __init__.py  cache.py  cli.py  client.py  config.py  credentials.py  update.py
src/linear_cli/commands/: __init__.py
tests/: conftest.py  test_cli.py  test_client.py  test_issues.py  test_projects.py  test_resources.py  test_teams.py
